crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__number_hex.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: let x = 0xG
---
alder::syntax

  × this hexadecimal number needs a hexadecimal digit
   ╭─[/project/src/main.ald:1:11]
 1 │ let x = 0xG
   · ┬         ┬
   · │         ╰── expected `0`-`9` or `a`-`f`
   · ╰── this binding starts here
   ╰────
