crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__number_leading_zero.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: let x = 007
---
alder::syntax

  × decimal numbers cannot have leading zeros
   ╭─[/project/src/main.ald:1:10]
 1 │ let x = 007
   · ┬        ┬
   · │        ╰── remove the leading zero
   · ╰── this binding starts here
   ╰────
