crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__operator_compose_left.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: let x = a << b
---
alder::syntax

  × `<<` is not a binary operator in Alder
   ╭─[/project/src/main.ald:1:11]
 1 │ let x = a << b
   · ┬         ─┬
   · │          ╰── unsupported operator
   · ╰── this binding starts here
   ╰────
  help: write an explicit function such as `(x) -> f(g(x))` for composition;
        `<<` is not an Alder operator
