crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__operator_concat.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: let x = a ++ b
---
alder::syntax

  × `++` is not a binary operator in Alder
   ╭─[/project/src/main.ald:1:11]
 1 │ let x = a ++ b
   · ┬         ─┬
   · │          ╰── unsupported operator
   · ╰── this binding starts here
   ╰────
  help: Alder has no `++` concatenation operator; use an array operation or a
        string template for the values you intend to combine
